--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "algoliasearch": "^4.3.0",
     "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.7",
+    "clipboard": "^2.0.6",
     "dotenv": "^8.2.0",
     "framer-motion": "^1.11.1",
     "gatsby": "^2.23.1",
